# data-serialization-dictionary

./: README.md  data-serialization-dictionary.cabal
src/Data/Serialization/: Dictionary.hs
