name:                data-serialization-dictionary
version:             0.2.0
synopsis:            Serialization into dictionary
-- description:         
homepage:            http://github.com/mvoidex/data-serialization-dictionary
license:             BSD3
license-file:        LICENSE
author:              Alexandr `Voidex` Ruchkin
maintainer:          voidex@live.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules:
    Data.Serialization.Dictionary
  other-modules:
  build-depends:
    base >= 4.5 && < 6,
    mtl                          >= 2.0 && < 2.2,
    containers               == 0.5.*,
    data-serialization   == 0.2.*,
    text                         == 0.11.*
